# nerium

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  LICENSE  README.md  SUBMISSION_CHECKLIST.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  pyproject.toml  tsconfig.json  vercel.json
.claude/: settings.json
.claude/agents/: aether.md  apollo.md  artemis.md  astraea.md  athena.md  boreas.md  cassandra.md  chione.md  coeus.md  crius.md  demeter.md  dike.md  dionysus.md  eos.md  epimetheus.md  erato-v2.md  erato.md  eunomia.md  euterpe.md  harmonia.md  hecate.md  helios-v2.md  helios.md  hemera.md  heracles.md  hesperus.md  hyperion.md  iapetus.md  kalypso.md  khronos.md  kratos.md  linus.md  marshall.md  moros.md  morpheus.md  nemea-rv-v2.md  nike.md  nyx.md  phanes.md  pheme.md  (+15 more)
.claude/hooks/: log-agent.sh  session-start.sh  validate-commit.sh
_meta/: HACKATHON_HANDOFF_V5_TO_V6.md  METIS_KICKOFF.md  NarasiGhaisan.md  RV_AgentPromptOpening.md  RV_FileManifest.md  RV_PLAN.md  TokenManager.md  V3_FILE_INVENTORY.md  claude_design_kalypso_variants.md  np_prew2_surgical_ferries.md  translator_notes.md
_meta/orchestration_log/: INDEX.md  baseline_prd_v2.md  day_0.md  v1_application_locked.md  v2_specialist_roster.md  v3_p2_p3_ship.md  v4_rv_pivot.md  v5_w3_ready.md  v6_helios_to_submission.md  v7_parallel_terminal_ship.md
_meta/reference/: AGENT_STRUCTURE.md  NERIUM_CRITIQUE.md  NERIUM_HANDOFF_PROMPT.md  NERIUMcyberpunkcity.html  nerium_valuation_prompt_v2.md
_meta/submission/: cerebral_valley_submission_form_fill.md
api/: index.py
api/cron/: key-rotation.py  trust-refresh.py
app/: globals.css  landing.css  layout.tsx  page.tsx
app/_harness/: ClientThemeBoot.tsx  HarnessShell.tsx  harness.css
app/advisor/: apollo.config.json  apollo.prompts.ts  apollo.ts  page.tsx
app/banking/: page.tsx
app/builder/: page.tsx
app/dashboard/: page.tsx
app/legal/: legal.css
app/marketplace/: page.tsx
app/play/: page.tsx
app/pricing/: page.tsx  pricing.css
cache/: lumio_run_2026_04_24.json
cache/lumio_final/: index.html  signup.html
docs/: apollo.decisions.md  artemis.decisions.md  athena.decisions.md  cassandra.decisions.md  coeus.decisions.md  demeter.decisions.md  demo_video_script.md  dike.decisions.md  dionysus.decisions.md  eos.decisions.md  erato-v2.decisions.md  erato.decisions.md  euterpe.decisions.md  harmonia.decisions.md  hecate.decisions.md  helios.decisions.md  heracles.decisions.md  hesperus.decisions.md  kalypso.decisions.md  linus.decisions.md  morpheus.decisions.md  nyx.decisions.md  phoebe.decisions.md  proteus.decisions.md  rhea.decisions.md  thalia-v2.decisions.md  thalia.decisions.md  triton.decisions.md  tyche.decisions.md  urania.decisions.md
docs/adr/: ADR-S11-react-hud-removal-test-obsolescence.md  ADR-override-antipattern-7.md
docs/contracts/: advisor_interaction.contract.md  advisor_ui.contract.md  agent_identity.contract.md  agent_intent.contract.md  agent_orchestration_runtime.contract.md  asset_ledger.contract.md  billing_meter.contract.md  blueprint_moment.contract.md  browse_ui.contract.md  budget_monitor.contract.md  builder_specialist_executor.contract.md  chat_ui.contract.md  cost_meter.contract.md  design_tokens.contract.md  dialogue_schema.contract.md  email_transactional.contract.md  event_bus.contract.md  feature_flag.contract.md  file_storage.contract.md  game_asset_registry.contract.md  game_event_bus.contract.md  game_state.contract.md  identity_card.contract.md  item_schema.contract.md  listing_submission.contract.md  living_template_customize.contract.md  lumio_demo_cache.contract.md  ma_session_lifecycle.contract.md  managed_agent_executor.contract.md  marketplace_commerce.contract.md  marketplace_listing.contract.md  marketplace_search.contract.md  mcp_server.contract.md  mcp_tool_registry.contract.md  oauth_dcr.contract.md  observability.contract.md  payment_midtrans.contract.md  payment_stripe.contract.md  pillar_lead_handoff.contract.md  pipeline_visualizer.contract.md  (+21 more)
docs/phase_0/: MANAGED_AGENTS_RESEARCH.md  NERIUM_AGENT_STRUCTURE.md  agent_flow_diagram.html
docs/phase_np/: RV_NP_AGENT_STRUCTURE.md  RV_NP_RESEARCH.md  RV_NP_agent_flow_diagram.html  helios_v2_final_inventory.md  helios_v2_scene_inventory.md
docs/phase_rv/: P0_ARTIFACT_INVENTORY.md  REUSE_REWRITE_MATRIX.md  RV_MANAGED_AGENTS_RESEARCH_v2.md  RV_NERIUM_AGENT_STRUCTURE_v2.md  RV_agent_flow_diagram.html
docs/qa/: asset_diagnostic_report.md  athena_v2_review.md  demeter_v2_review.md  e2e_obsolescence_inventory.md  harmonia_rv_state_integration.md  harmonia_rv_visual_integration.md  harmonia_sweep.md  hecate_v2_review.md  (+16 more)
lib/: empty.ts  falClient.ts
ops/: env.observability.example
public/: asset_manifest.json
scripts/: build-atlases-32.mjs  build_lumio_cache.mjs  build_world_atlases.mjs  inline-assets-to-public.sh  opus-svg-export.ts  pack-atlas.ts  rewrite-manifest-to-public.mjs  seed-asset-ledger.mjs  slice-sprite.py  submit_ma_research_preview_form.md  upload-assets-to-blob.ts
tests/: apollo_marketplace_bazaar_scene.spec.ts  apollo_oasis_scene.spec.ts  apollo_temple_interior_scene.spec.ts  apollo_village_scene.spec.ts  asset_registry.test.ts  caravan_forest_crossroad_scene.spec.ts  caravan_mountain_pass_scene.spec.ts  caravan_road_scene.spec.ts  caravan_road_smoke.spec.ts  caravan_wayhouse_interior_scene.spec.ts  conftest.py  creator_submit_autosave.test.ts  creator_submit_schema.test.ts  creator_submit_store.test.ts  cyber_rooftop_scene.spec.ts  cyber_server_room_scene.spec.ts  cyber_skyscraper_lobby_scene.spec.ts  cyber_underground_alley_scene.spec.ts  cyberpunk_shanghai_scene.spec.ts  cyberpunk_shanghai_smoke.spec.ts  dialogue.test.ts  landmark_glyph_proximity.spec.ts  lights2d_polish.spec.ts  phaser-smoke.spec.ts  play_lean_hud_s11.spec.ts  preload_ai_assets.spec.ts  pricing.spec.ts  quest.test.ts  quest_indicator_s8.spec.ts  tier_gating.spec.ts  title_loading_marketplace_s10.spec.ts  treasurer.spec.ts  visual_foundation.test.ts  visual_snapshot.spec.ts
types/: jsx-legacy.d.ts
(+837 files in other folders)
