[project]
name = "nerium-backend"
version = "0.1.0"
description = "NERIUM backend API (FastAPI, Postgres 16 multi-tenant RLS, Redis 7, Arq). Hackathon submission Cerebral Valley plus Anthropic April 2026, built with Opus 4.7."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ghaisan Khoirul Badruzaman", email = "finerium@users.noreply.github.com" }]
requires-python = ">=3.12"

dependencies = [
  # Web framework
  "fastapi>=0.115.0,<0.120.0",
  "uvicorn[standard]>=0.32.0,<0.36.0",
  "starlette>=0.41.0,<0.46.0",

  # Configuration + validation
  "pydantic>=2.9.0,<3.0.0",
  # pydantic[email] brings in email-validator so ``pydantic.EmailStr`` can
  # validate addresses in the User model. Aether Session 3 added this for
  # ``src/backend/models/user.py``; downstream agents reuse.
  "email-validator>=2.2.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",

  # Database
  "asyncpg>=0.30.0,<0.32.0",
  "alembic>=1.14.0,<2.0.0",
  "sqlalchemy>=2.0.35,<2.1.0",

  # Redis
  "redis>=5.2.0,<6.0.0",

  # Background job queue
  "arq>=0.26.0,<0.27.0",

  # Observability (shared with Selene obs subsystem)
  "structlog>=24.4.0,<26.0.0",
  "asgi-correlation-id>=4.3.0,<5.0.0",

  # HTTP client
  "httpx>=0.27.0,<0.29.0",

  # Auth + crypto
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  # Form-body parsing for OAuth 2.1 token endpoint (application/x-www-form-urlencoded
  # per RFC 6749 Section 4.1.3). FastAPI's Form(...) path requires this.
  "python-multipart>=0.0.20,<0.1.0",

  # Plutus W2 NP P4 Session 1: Stripe SDK for subscription + checkout + webhook.
  # Test mode only pre-Stripe-Atlas per Gate 4 lock. Pinned to the 12.x line
  # which carries the Checkout Session + Webhook signature helpers used here.
  "stripe>=11.0.0,<13.0.0",

  # Tethys W2 NP P5 Session 1: PyJWT for EdDSA short-lived bearer tokens
  # signed with Ed25519 agent identity keys per docs/contracts/agent_identity
  # contract Section 4. ``python-jose`` does not implement EdDSA, hence the
  # additional dependency. The ``[crypto]`` extra pins the cryptography
  # backend wired through to ``cryptography.hazmat.primitives.asymmetric.ed25519``
  # which is already a transitive dependency via python-jose[cryptography].
  "pyjwt[crypto]>=2.10.0,<3.0.0",

  # Crius W2 NP P5 Session 2: pybreaker for circuit breaker state machine
  # (closed -> open -> half-open) per docs/contracts/vendor_adapter.contract.md
  # Section 3.3, tenacity for exponential-jitter retry on transient vendor
  # errors per the same contract Section 3.3. Both wrap the dispatcher's
  # adapter.invoke call sites and ride alongside the AES-256-GCM envelope
  # crypto path. cryptography is already required transitively by
  # python-jose[cryptography] + pyjwt[crypto] but Crius adds the X25519
  # ECDH + AES-Key-Wrap-with-Padding (RFC 5649) primitives so we pin the
  # explicit dep here to keep the import surface honest.
  "pybreaker>=1.2.0,<2.0.0",
  "tenacity>=8.5.0,<10.0.0",
  "cryptography>=44.0.0,<46.0.0",

  # Plutus W2 NP S2: ReportLab pure-Python PDF Canvas for billing invoice
  # generation per spawn directive (neither weasyprint nor reportlab were
  # listed; reportlab picked because it has no native lib dependency,
  # ships the Canvas drawing primitives we need, and avoids the
  # libcairo2/libpango-1.0-0 Docker base layer that weasyprint requires).
  # Used by ``src/backend/billing/invoices/pdf_generator.py`` to render
  # marketplace purchase receipts at A4 paper size.
  "reportlab>=4.2.0,<5.0.0",

  # Aether-Vercel NP T6: Mangum ASGI-to-Lambda adapter wraps the FastAPI
  # app for Vercel's Python serverless runtime. Lifespan="on" runs the
  # FastAPI startup + shutdown hooks per cold invocation so the asyncpg
  # pool, redis client, and Hemera flag bootstrap initialise inside the
  # warm container per V6 D2 decision. Pinned to the 0.17.x line which
  # ships the lifespan=on path that warms module-level pool state.
  "mangum>=0.17.0,<0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.26.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.7.0,<0.10.0",
  "mypy>=1.13.0,<2.0.0",
  "types-redis>=4.6.0,<5.0.0",
  # Aether W1 Session 2: in-memory Redis stub for middleware + rate-limit tests.
  "fakeredis>=2.26.0,<3.0.0",
]

obs = [
  # Selene consumes these; Aether declares them so the Arq lifespan can import the
  # obs subsystem without a separate installation step. Keep optional to allow the
  # FastAPI core tests to run in CI without the full OpenTelemetry stack.
  "opentelemetry-api>=1.28.0,<2.0.0",
  "opentelemetry-sdk>=1.28.0,<2.0.0",
  # Both exporters shipped: HTTP is the primary path to Grafana Cloud Tempo via
  # Alloy's OTLP receiver, gRPC kept for direct push fallback scenarios.
  "opentelemetry-exporter-otlp-proto-http>=1.28.0,<2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.28.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-asyncpg>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-redis>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-httpx>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0,<1.0.0",
  "opentelemetry-instrumentation-logging>=0.49b0,<1.0.0",
  "sentry-sdk[fastapi,asyncpg]>=2.18.0,<3.0.0",
  "prometheus-client>=0.21.0,<1.0.0",
]

mcp = [
  # Khronos consumes these; Aether declares them so the FastAPI app factory can
  # mount FastMCP as an ASGI sub-app at /mcp and include the OAuth DCR routers
  # without a separate install step. MCP spec revision 2025-06-18 (Streamable
  # HTTP + RFC 9728 Protected Resource Metadata + RFC 8707 Resource Indicators)
  # is the minimum supported version.
  "mcp>=1.6.0,<2.0.0",
  # cryptography ships transitively via python-jose[cryptography]; pin explicitly
  # so the JWK (n, e) serialisation path in src/backend/auth/jwt_signer.py has a
  # known-good RSA primitive surface.
  "cryptography>=44.0.0,<46.0.0",
]

storage = [
  # Chione consumes these for Cloudflare R2 presigned POST + GET signing and
  # ClamAV INSTREAM scanning. Boto3 S3-compatible client is sufficient for R2's
  # signature-v4 surface; no aioboto3 yet to keep the runtime slim (the Arq
  # scan worker wraps sync R2 calls in asyncio.to_thread).
  "boto3>=1.35.0,<2.0.0",
  "botocore>=1.35.0,<2.0.0",
  # python-magic detects MIME from actual bytes so the upload-complete handler
  # can flag content-type spoofing per file_storage.contract Section 8.
  # Libmagic must be installed at the OS level (brew install libmagic on macOS,
  # apt install libmagic1 on Debian / Hetzner CX32).
  "python-magic>=0.4.27,<0.5.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Contract paths per docs/contracts/{mcp_server,oauth_dcr,mcp_tool_registry}.contract.md
# Section 6: tests/mcp/, tests/auth/. Aether's FastAPI core tests live at
# tests/backend/. Keep all three roots discoverable.
testpaths = ["tests/backend", "tests/mcp", "tests/auth"]
python_files = ["test_*.py"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".next",
  "node_modules",
  "_skills_staging",
  "src/backend/db/migrations/versions",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N", "ASYNC", "S"]
ignore = [
  "E501",  # line length handled by formatter
  "S101",  # assert allowed in tests
  "B008",  # FastAPI Depends() default intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "src/backend/db/migrations/",
]
